# KinexonCppChallenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
header/: position_data.h  zeromq.h
messages/: CMakeLists.txt  position.proto
src/: position_data.cpp  rand_pos_gen.cpp  rand_pos_gen_one_skt.cpp
test/: DrwaPlayerPositions.py  subscriber.cpp
